# UGV

./: .gitignore  README.md  UGV
bash/: common.sh  install-deps.sh
docker/: Dockerfile.ros2  README.md  packages-ros.list  packages.list
ros/ugv_bringup/: CMakeLists.txt
ros/ugv_bringup/launch/: sim_bringup.launch.py
ros/ugv_description/: CMakeLists.txt  package.xml
ros/ugv_description/urdf/choo_2/: model.gazebo
ros/ugv_hardware/ugv_hardware/: CMakeLists.txt  package.xml
ros/ugv_msg/: CMakeLists.txt
ros/ugv_nav/: CMakeLists.txt  package.xml
ros/ugv_nav/config/: nav2_params.yaml
ros/ugv_nav/launch/: nav.launch.py
ros/ugv_sim/ugv_sim/: package.xml
ros/ugv_sim/ugv_sim/launch/: sim.launch.py
ros/ugv_sim/ugv_sim/scripts/: motors.py
ros/ugv_states/ugv_states/: state_machine.py
ros/ugv_vision/: CMakeLists.txt
test/: package.xml
ugv_bringup/: CMakeLists.txt  package.xml
ugv_description/: CMakeLists.txt
ugv_description/urdf/choo_2/: model.gazebo
ugv_hardware/ugv_hardware/: package.xml
ugv_msg/: CMakeLists.txt  package.xml
ugv_nav/: CMakeLists.txt  package.xml
ugv_nav/config/: waypoints.yaml
ugv_nav/config/move_base/: costmap_common_params.yaml  local_costmap_params.yaml
ugv_sim/: CMakeLists.txt  package.xml
ugv_sim/ugv_sim/: CMakeLists.txt  package.xml
ugv_sim/ugv_sim/launch/: sim.launch.py
ugv_sim/ugv_sim/scripts/: motors.py
ugv_states/: CMakeLists.txt  package.xml
ugv_states/launch/: states_launch.xml
ugv_vision/: package.xml
