<?xml version="1.0"?>
<package format="2">
  <name>ugv_bringup</name>
  <version>0.0.0</version>
  <description>The ugv_bringup package</description>
  <maintainer email="wkfletcher@knights.ucf.edu">Wes</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
	  <build_tool>ament_cmake</build_tool>
  </export>
</package>
