<?xml version="1.0"?>
<package format="2">
  <name>ugv_bringup</name>
  <version>0.0.0</version>
  <description>The ugv_bringup package</description>
  <maintainer email="wkfletcher@knights.ucf.edu">Wes</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <buildtool_depend>ament_cmake_python</buildtool_depend> -->

  <exec_depend>ros2launch</exec_depend>

  <export>
	  <build_type>ament_cmake</build_type>
  </export>

</package>
