<?xml version="1.0"?>
<package format="3">
  <name>ugv_msg</name>
  <version>0.0.0</version>
  <description>The ugv_msg package</description>
  <maintainer email="wkfletcher@knights.ucf.edu">Wes</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <!-- enable message generation -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type> 
  </export>
</package>
