<?xml version="1.0"?>
<package format="2">
  <name>ugv_nav</name>
  <version>0.0.0</version>
  <description>The ugv_nav package</description>
  <maintainer email="wkfletcher@knights.ucf.edu">Wes</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>robot_localization</depend>
  <depend>slam_toolbox</depend>
    
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>

</package>
