<?xml version="1.0"?>
<package format="2">
  <name>ugv_states</name>
  <version>0.0.0</version>
  <description>The ugv_states package</description>
  <maintainer email="wkfletcher@knights.ucf.edu">Wes</maintainer>
  <license>TODO</license>

  <!-- The *depend tags are used to specify dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  
  <exec_depend>ros2launch</exec_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>

</package>
