<?xml version="1.0"?>
<package format="2">
  <name>ugv_vision</name>
  <version>0.0.0</version>
  <description>the ugv_vision package</description>
  <maintainer email="wkfletcher@knights.ucf.edu">Wes</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>nav2_costmap_2d</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
    <build_type>ament_cmake</build_type> 
  </export>
</package>
