<?xml version="1.0"?>
<package format="2">
  <name>ugv_description</name>
  <version>0.0.0</version>
  <description>The ugv_description package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="robotics@ucf.edu">Wesley Fletcher</maintainer>
  <author email="wkfletcher@knights.ucf.edu">Wesley Fletcher</author>
  <license>TODO</license>
  
  <depend>xacro</depend>

  <export>
    <!-- export URDF for gazebo_ros to find -->
    <gazebo_ros gazebo_model_path="${prefix}/urdf"/>
    <build_type>ament_cmake</build_type>
  </export>

</package>
