<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ugv_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>

  <maintainer email="wes@todo.todo">wes</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>hector_gazebo_plugins</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_pkgs</depend>

  <export>
    <!-- apparently this is how you're supposed to do it: https://nu-msr.github.io/me495_site/lecture10_sdf_gazebo.html -->
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}/worlds" />
    
    <build_type>ament_cmake</build_type> 
  </export>

</package>
 